# awss3

./: .gitignore  index.html  pyproject.toml  react-demo.html
awss3/: lambda_function.py  lambda_test_event.json  main.py
tasks/: task-(1).py  task-(2).py  task-(3).py  task-1.py  task-2.py  task-3.py
